--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  margin: 1rem;
+  font-size: medium;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -24,20 +31,33 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .ImageContainer {
+  position: absolute;
   height: 100vh;
+  background: no-repeat center url(../src/background.jpg);
   width: 100vw;
+  max-height: 100%;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
+  justify-content: center;
+  vertical-align: top;
+  background-attachment: fixed;
+  overflow: auto;
+}
+
+.Links {
+  position: absolute;
+  right: 1rem;
+  bottom: 0;
+  color: black;
+}
+
+.overlay {
+  position: absolute;
+  width: 100vh;
+  height: 100vh;
+  justify-content: center;
 }
