--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ a {
 }
 
 .ImageContainer {
-  background: url(../src/background.jpg) no-repeat center;
+  background: url(../src/background4.jpg) no-repeat center;
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -48,9 +48,24 @@ a {
   overflow: auto;
 }
 
+.Links {
+  position: absolute;
+  right: 1rem;
+  top: 0;
+  color: whitesmoke;
+}
+.TextContent {
+  position: absolute;
+  height: 100vh;
+  top: 45vh;
+  left: 50vw;
+  color: lightblue;
+  font-size: small;
+}
+
 @media (max-width: 600px) {
   .ImageContainer {
-    background: url(../src/background.jpg) no-repeat 70%;
+    background: url(../src/background1.jpg) no-repeat center;
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -67,9 +82,13 @@ a {
   }
 }
 
-.Links {
-  position: absolute;
-  right: 1rem;
-  top: 0;
-  color: black;
+@media (max-width: 800px) {
+  .TextContent {
+    position: absolute;
+    height: 100vh;
+    top: 47vh;
+    left: 50vw;
+    color: lightblue;
+    font-size: small;
+  }
 }
